Closed Bug 379386 Opened 17 years ago Closed 17 years ago

[FIX]ASSERTION: Should have found a parent before this

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha5

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase
The attached testcase triggers this assertion in my debug build:
###!!! ASSERTION: Should have found a parent before this: 'aProspectiveParent->G
etStyleContext()->GetPseudoType() == nsCSSAnonBoxes::viewportScroll || aProspect
iveParent->GetStyleContext()->GetPseudoType() == nsCSSAnonBoxes::canvas || aPros
pectiveParent->GetStyleContext()->GetPseudoType() == nsCSSAnonBoxes::pageSequenc
e', file c:/mozilla/mozilla/layout/generic/nsFrame.cpp, line 5537

It seems that this assertion was added with bug 323656.
Attached patch Argh.Splinter Review
I think this is better handling of root tables....
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #263426 - Flags: superreview?(roc)
Attachment #263426 - Flags: review?(roc)
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Summary: ASSERTION: Should have found a parent before this → [FIX]ASSERTION: Should have found a parent before this
Target Milestone: --- → mozilla1.9alpha5
Blocks: 379687
I apparently forgot that I already filed bug 379378 for this.
Blocks: 379378
Attachment #263426 - Flags: superreview?(roc)
Attachment #263426 - Flags: superreview+
Attachment #263426 - Flags: review?(roc)
Attachment #263426 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
No longer blocks: 379378
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: