Fix determination of the style context parent for the inner table frame of aroot table.  Bug 379386, r+sr=roc