layout/tables/nsTableFrame.cpp
@@ -164,6 +164,13 @@ nsTableFrame::GetParentStyleContextFrame(nsPresContext* aPresContext,
   // must return whatever our parent would normally have returned.
 
   NS_PRECONDITION(mParent, "table constructed without outer table");
+  if (!mContent->GetParent() && !GetStyleContext()->GetPseudoType()) {
+    // We're the root.  We have no style context parent.
+    *aIsChild = PR_FALSE;
+    *aProviderFrame = nsnull;
+    return NS_OK;
+  }
+    
   return NS_STATIC_CAST(nsFrame*, mParent)->
           DoGetParentStyleContextFrame(aPresContext, aProviderFrame, aIsChild);
 }
